add some basic styles and UI

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Battleship</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="sandbox.js" type="module"></script>
+    <!-- <script src="sandbox.js" type="module"></script> -->
+    <script src="app.js" type="module"></script>
   </head>
   <body>
     <div class="wrapper">
       <div class="game-container">
-        <header class="gameboard-header"></header>
-        <div class="gameboard-container">
-          <!-- <div class="gameboard" data-board="1"></div> -->
-          <!-- <div class="gameboard" data-board="2"></div> -->
-        </div>
+        <!-- <div class="gameboard-container"> -->
+        <!-- <div class="gameboard" data-board="1"></div> -->
+        <!-- <div class="gameboard" data-board="2"></div> -->
+        <!-- </div> -->
       </div>
     </div>
   </body>
