ship get crossed out as they are sunk

--- a/index.html
+++ b/index.html
@@ -11,12 +11,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <div class="game-container">
-        <!-- <div class="gameboard-container"> -->
-        <!-- <div class="gameboard" data-board="1"></div> -->
-        <!-- <div class="gameboard" data-board="2"></div> -->
-        <!-- </div> -->
-      </div>
+      <div class="game-container"></div>
     </div>
   </body>
 </html>
