--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <div class="game-container"></div>
+      <!-- <div class="game-container"></div> -->
     </div>
   </body>
 </html>
