--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <script src="app.js" type="module"></script>
   </head>
   <body>
-    <div class="wrapper">
-      <!-- <div class="game-container"></div> -->
-    </div>
+    <div class="wrapper"></div>
   </body>
 </html>
