hard code HTML for testing appearance

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <script src="app.js" type="module"></script>
   </head>
   <body>
-    <div class="wrapper"></div>
+    <div class="wrapper">
+      <div class="start-screen">
+        <h1 class="start-heading">Battleship</h1>
+        <button class="start-game-btn">Start Game</button>
+      </div>
+    </div>
   </body>
 </html>
