create start-ui and clean up a game-ui bug

--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
     <script src="app.js" type="module"></script>
   </head>
   <body>
-    <div class="wrapper">
-      <div class="start-screen">
-        <h1 class="start-heading">Battleship</h1>
-        <button class="start-game-btn">Start Game</button>
-      </div>
-    </div>
+    <div class="wrapper"></div>
   </body>
 </html>
